--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,9 @@ html {
 }
 
 .page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   inline-size: 1200px;
   block-size: 100%;
   margin: auto;
@@ -21,8 +24,8 @@ html {
 .content{
   display: flex;
   flex-direction: row;
-  width: 1140px; 
-  margin: 133px 30px;
+  max-width: 1140px; 
+  margin: auto;
   justify-content: space-between;
   align-items: end;
  }
@@ -56,55 +59,21 @@ ol {
   clip-path: inset(50%);
   white-space: nowrap;
 } 
-/* button */
-.button {
-  height: 34px;
-  background-color: transparent;
-  color: #fff;
-  border: 1px solid #fff;
-  font-size: 18px;
-  font-weight: 700;
-  font-family: 'Fira Sans Condensed', sans-serif;
-}
-
-.search-form__submit-button {
-  width: 194px;
-  cursor: pointer;
-  align-self: flex-end;
-}
-
-.more-button {
-  cursor: pointer;
-  width: 100%;
-}
-/* button status*/
-.button:active{
-  background-color: #545050;
-}
-
-.button:hover{
-  text-decoration: underline;
-}
-
-.button:focus-visible {
-  outline: 1px solid #fff;
-  outline-offset: 2px;
-}
 /* result */
 .result {
-  margin-right: 26px;
+  margin-inline-end: 26px;
 }
 
 .result__video-container {
   position: relative;
-  width: 711px;
-  height: 386px;
-  margin-bottom: 16px;
+  inline-size: 711px;
+  block-size: 386px;
+  margin-block-end: 16px;
 }
 
 .result__video {
-  width: 100%;
-  height: 100%;
+  inline-size: 100%;
+  block-size: 100%;
   object-fit: cover;
   object-position: center;
 }
@@ -112,20 +81,19 @@ ol {
 .search-form {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 0px;
-  padding-bottom: 0px; 
+  margin-block-end: 0px;
+  padding-block-end: 0px; 
 }
 
 .search-form__fieldset {
 border-style: none;
-justify-content: space-between;
 }
 
 .search-form__fieldset-title{
   font-size: 18px;  
   font-weight: 400;
   line-height: 22px;
-  padding-bottom: 4px;
+  padding-block-end: 4px;
 }
 
 .search-form__label{
@@ -135,14 +103,14 @@ justify-content: space-between;
 .search-form__textfield {
   appearance: none;
   padding: 0;
-  width: 226px;
+  inline-size: 226px;
   background-color: transparent;
   color: #fff;
   border-style: none;
-  border-top: 1px solid #fff;
-  border-left: none;
-  border-bottom: 1px solid #fff;
-  border-right: none;
+  border-block-start: 1px solid currentColor;
+  border-inline-start: none;
+  border-block-end: 1px solid currentColor;
+  border-inline-end: none;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   font-weight: 400;
@@ -155,29 +123,47 @@ justify-content: space-between;
 
 .search-form__checkbox-list {
   display: flex;
-  cursor: pointer;
-  width: 209px;
+  inline-size: 209px;
   justify-content: space-between;
+}
+
+.search-form__checkbox {
+  appearance: none;
 }
 
 .search-form__pseudo-checkbox {
   display: inline-block;
-  width: 13px;
-  height: 13px;
-  margin-right: 6px;
+  inline-size: 13px;
+  block-size: 13px;
+  margin-inline-end: 6px;
   vertical-align: middle;
-  outline: 1px solid #fff;
+  outline: 1px solid currentColor;
   outline-offset: 2px;
   background-color: transparent;
   align-self: center;
 }
 
 .search-form__label-text {
-  padding-left: 2px;
+  padding-inline-start: 2px;
+}
+/* button */
+.button {
+  block-size: 35px;
+  background-color: transparent;
+  color: #fff;
+  border: 1px solid currentColor;
+  font-size: 18px;
+  font-weight: 700;
+  font-family: 'Fira Sans Condensed', sans-serif;
+}
+
+.search-form__submit-button {
+  inline-size: 194px;
+  align-self: flex-end;
 }
 /* search text field status*/
 .search-form__label:has(.search-form__textfield:focus){
-  outline: 1px solid #fff;
+  outline: 1px solid currentColor;
   outline-offset: 1px;
   }
 
@@ -190,30 +176,45 @@ justify-content: space-between;
   }
   
   .search-form__textfield:active{
-   border: 1px solid #fff;
+   border: 1px solid currentColor;
    outline: none;
   }
   /*search checkbox status*/
 .search-form__checkbox:checked+.search-form__pseudo-checkbox {
-  background-color: #fff;
+  background-color: currentColor;
 }
 
 .search-form__label:has(.search-form__checkbox:focus-visible) {
-  outline: 1px solid #fff;
+  outline: 1px solid currentColor;
   outline-offset: 2px; 
 }
 
 .search-form__pseudo-checkbox:active {
-  background-color: #fff;
+  background-color: currentColor;
 }
 
 .search-form__label:has(.search-form__checkbox):hover {
   text-decoration: underline;
+  cursor: pointer;
+}
+/* button status*/
+.button:active{
+  background-color: #545050;
+}
+
+.button:hover{
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.button:focus-visible {
+  outline: 1px solid currentColor;
+  outline-offset: 2px;
 }
 
 .content__details {
-  width: 100%;
-  height: 100%;
+  inline-size: 100%;
+  block-size: 100%;
 }
 /* TITLE */
 .title {
@@ -232,14 +233,14 @@ justify-content: space-between;
 /* card */
   .content__list {
   position: relative;
-  height: 301px;
-  margin-top: 21px;
+  block-size: 301px;
+  margin-block-start: 21px;
   overflow: auto;
   padding: 3px;
 }
 
 .content__list-item:not(:last-child) {
-  margin-bottom: 31px;
+  margin-block-end: 31px;
 }
 
 .content__card-link {
@@ -251,17 +252,17 @@ justify-content: space-between;
   outline: none;
 }
  
-  .content__video-card {
+.content__video-card {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: start;
-  width: 394px;
+  inline-size: 394px;
 }
 
 .content__video-card-title{
   margin: 0;
-  padding-top: 4px;
+  padding-block-start: 4px;
   font-family: 'Oswald', sans-serif;
   text-transform: uppercase;
   font-size: 30px;  
@@ -276,14 +277,18 @@ justify-content: space-between;
 .content__video-card-description{
   font-size: 18px;  
   font-weight: 400;
-  width: 200px;
+  inline-size: 200px;
 }
 
 .content__video-card-thumbnail {
-width: 100%;
-height: 106px;
+inline-size: 100%;
+block-size: 106px;
 object-fit: cover;
 object-position: center;
+}
+
+.more-button {
+  inline-size: 100%;
 }
 /* card status*/
 .content__card-link:hover {
@@ -299,7 +304,6 @@ object-position: center;
 }
 
 .content__card-link:focus-visible {
-  outline: 1px solid #fff;
+  outline: 1px solid currentColor;
   outline-offset: 2px;
-
 }
